package com.lukehemmin.lukeVanilla.System.FleaMarket

import com.lukehemmin.lukeVanilla.System.Database.Database
import com.lukehemmin.lukeVanilla.System.Economy.EconomyManager
import com.lukehemmin.lukeVanilla.System.NPC.NPCInteractionRouter
import org.bukkit.Bukkit
import org.bukkit.event.EventHandler
import org.bukkit.event.Listener
import org.bukkit.event.inventory.InventoryCloseEvent
import org.bukkit.plugin.java.JavaPlugin

/**
 * 플리마켓 시스템 Manager (진입점)
 */
class FleaMarketManager(
    private val plugin: JavaPlugin,
    database: Database,
    private val economyManager: EconomyManager,
    private val npcRouter: NPCInteractionRouter
) : Listener {
    
    private val repository: FleaMarketRepository
    val service: FleaMarketService
    val gui: FleaMarketGUI
    private val command: FleaMarketCommand
    
    // NPC ID 캐시 (Concurrent Set)
    private val npcCache = java.util.concurrent.ConcurrentHashMap.newKeySet<Int>()
    
    init {
        // Repository 초기화
        repository = FleaMarketRepository(database)
        
        // Service 초기화
        service = FleaMarketService(repository, economyManager)
        
        // GUI 초기화
        gui = FleaMarketGUI(service)
        
        // Command 초기화
        command = FleaMarketCommand(service, gui, this)
        
        // 초기화
        initialize()
    }
    
    /**
     * 플리마켓 시스템 초기화
     */
    private fun initialize() {
        // 이벤트 리스너 등록
        Bukkit.getPluginManager().registerEvents(gui, plugin)
        Bukkit.getPluginManager().registerEvents(this, plugin)
        
        // Citizens가 로드된 경우에만 NPC 리스너 등록
        // NPCInteractionRouter 사용으로 인해 기존 리스너 등록 비활성화
        /*
        if (Bukkit.getPluginManager().getPlugin("Citizens") != null) {
            try {
                Bukkit.getPluginManager().registerEvents(FleaMarketNPCListener(this), plugin)
                println("[플리마켓] Citizens NPC 리스너가 등록되었습니다.")
            } catch (e: Exception) {
                println("[플리마켓] Citizens NPC 리스너 등록 실패: ${e.message}")
            }
        }
        */
        
        // 명령어 등록
        plugin.getCommand("market")?.setExecutor(command)
        plugin.getCommand("market")?.tabCompleter = command
        plugin.getCommand("플마")?.setExecutor(command)
        plugin.getCommand("플마")?.tabCompleter = command
        
        // 캐시 로드 (비동기, 5초 후)
        Bukkit.getScheduler().runTaskLater(plugin, Runnable {
            service.loadCache()
            loadNPCCache()
        }, 100L)  // 5초 후 (100틱)
        
        println("[플리마켓] 플리마켓 시스템이 초기화되었습니다.")
    }
    
    /**
     * NPC 캐시 로드
     */
    fun loadNPCCache() {
        repository.getAllNPCsAsync().thenAccept { npcs ->
            npcCache.clear()
            npcCache.addAll(npcs)
            
            // 라우터에 NPC 등록
            npcs.forEach { npcId ->
                npcRouter.register(npcId) { player ->
                    gui.openMarket(player)
                }
            }
            
            println("[플리마켓] ${npcs.size}개의 NPC를 로드했습니다.")
        }
    }
    
    /**
     * NPC가 플리마켓 NPC인지 확인
     */
    fun isMarketNPC(npcId: Int): Boolean {
        return npcCache.contains(npcId)
    }
    
    /**
     * NPC 추가
     */
    fun addNPC(npcId: Int) {
        repository.registerNPC(npcId).thenAccept { success ->
            if (success) {
                npcCache.add(npcId)
                // 라우터에 등록
                npcRouter.register(npcId) { player ->
                    gui.openMarket(player)
                }
            }
        }
    }
    
    /**
     * NPC 제거
     */
    fun removeNPC(npcId: Int) {
        repository.unregisterNPC(npcId).thenAccept { success ->
            if (success) {
                npcCache.remove(npcId)
                // 라우터에서 제거
                npcRouter.unregister(npcId)
            }
        }
    }
    
    /**
     * 인벤토리 닫기 이벤트 처리
     */
    @EventHandler
    fun onInventoryClose(event: InventoryCloseEvent) {
        val player = event.player as? org.bukkit.entity.Player ?: return
        gui.onInventoryClose(player)
    }
    
    /**
     * 플리마켓 시스템 종료
     */
    fun shutdown() {
        println("[플리마켓] 플리마켓 시스템을 종료합니다.")
    }
}
